<resources>
    <string name="app_name">MyRoadr</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bottom">barre</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_api">AIzaSyCVIFnsDTBM0J9X_d8054kqDJ65P_jg8L8</string>
    <string name="profile_name">User Anonym db</string>
    <string name="profile_status">online</string>
    <string name="adding_profile_photo">Adding profile photo</string>
    <string name="account">Account</string>
    <string name="user_email">example@example.com</string>
    <string name="phone_number_desc">Tap to change email</string>
    <string name="manage">Manage Mes événements</string>
    <string name="footer_sentence">MyRoadr copyright 2025</string>
</resources>